Fix flex issue on mobile safari

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -54,7 +54,7 @@ body {
   }
 
   .filters {
-    margin: 15px 0;
+    margin: 10px 0;
 
     select {
       appearance: menulist-button;
@@ -66,6 +66,7 @@ body {
   }
 
   .location-list {
+    flex: 1;
     overflow-y: scroll;
   }
 
